# ecommerce-reports-prefect

./: .gitignore  README.md  TODO.md  docker-compose.yaml  flows.py  justfile  prefect.yaml  prepare_req.sh  pyproject.toml  requirements.txt
src/: api_exchange_rates.py  api_handlers.py  config.py  utils.py
src/clients/: abstract_client.py  apilo.py  baselinker.py  exchange_rates.py
src/db/: _insert_order.py  _insert_order2.py  _insert_order3.py  _insert_order4_batch.py  _insert_order5_single_order_func.py  _query_orders.py  alembic.ini  crud.py  dto.py  engine.py  models.py  operations.py
src/db/migrations/: env.py
src/db/migrations/versions/: 1939c75335ba_add_unit_purchace_cost_to_product.py  38d5d9d445e5_add_category_to_product.py  581a2c439846_add_ignore_to_order.py  636d15788aeb_edit_offer_model.py  7ffa78c08521_initial_schema.py  81abff1b2dde_add_timezone_to_datetime_fields.py  9739b77b28c0_edit_offer_model_v2.py  ad870f4ef86b_add_taxrate.py  f26467ee7290_add_origin_id_to_offer.py
src/domain/: entities.py
