[project]
name = "ecommerce-reports-prefect"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "pandas>=2.2.3",
    "prefect-gcp>=0.6.8",
    "prefect[email,slack]>=3.4.1,<3.4.5",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
