[project]
name = "ecommerce-reports-prefect"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "gspread>=6.2.1",
    "pandas>=2.2.3",
    "prefect-gcp>=0.6.8",
    "prefect[email,slack]>=3.4.1,<3.4.5",
    "psycopg2-binary>=2.9.10",
    "pycountry>=24.6.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlmodel[asyncio]>=0.0.24",
]
